--- a/html codes/index.html
+++ b/html codes/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <!-- Naviagtion Bar-->
@@ -21,36 +22,6 @@
 
     <main>
         <h1>Main content</h1>
-        <!-- <section>
-            <h1>Top 5 Upcoming Games You Can’t Miss in 2025</h1>
-
-    <p>Gaming in 2025 is shaping up to be more immersive than ever. From breathtaking graphics to innovative gameplay mechanics, the gaming industry continues to push boundaries. Whether you’re a console player, PC enthusiast, or mobile gamer, there’s something exciting for everyone. Here’s a sneak peek at the top 5 upcoming games that are creating buzz in the gaming world.</p>
-
-    <h2>1. CyberQuest 2077</h2>
-    <img src="https://via.placeholder.com/800x400?text=CyberQuest+2077" alt="CyberQuest 2077">
-    <p>Step into a futuristic city where every choice matters. <strong>CyberQuest 2077</strong> promises a vast open world, stunning visuals, and a dynamic storyline. Players will navigate through neon-lit streets, engage in intense combat, and make decisions that shape the future of the game world.</p>
-
-    <h2>2. Battle Arena: Legends</h2>
-    <img src="https://via.placeholder.com/800x400?text=Battle+Arena+Legends" alt="Battle Arena Legends">
-    <p>If competitive gaming is your thing, <strong>Battle Arena: Legends</strong> is a must-play. Featuring fast-paced PvP battles, a variety of heroes with unique abilities, and regular esports tournaments, this game will test your strategic thinking and reflexes.</p>
-
-    <h2>3. Mythic Realms Online</h2>
-    <img src="https://via.placeholder.com/800x400?text=Mythic+Realms+Online" alt="Mythic Realms Online">
-    <p>Fans of MMORPGs, get ready! <strong>Mythic Realms Online</strong> brings epic quests, guild battles, and massive multiplayer interactions. Explore vast kingdoms, defeat legendary bosses, and team up with players worldwide in a constantly evolving fantasy world.</p>
-
-    <h2>4. SpeedRacer X</h2>
-    <img src="https://via.placeholder.com/800x400?text=SpeedRacer+X" alt="SpeedRacer X">
-    <p>For adrenaline junkies, <strong>SpeedRacer X</strong> delivers heart-pounding racing action. Customize your vehicles, race across extreme tracks, and compete online in tournaments to become the ultimate racing champion.</p>
-
-    <h2>5. Alien Invasion: Earth’s Last Stand</h2>
-    <img src="https://via.placeholder.com/800x400?text=Alien+Invasion" alt="Alien Invasion: Earth's Last Stand">
-    <p>Prepare for an intergalactic showdown in <strong>Alien Invasion: Earth’s Last Stand</strong>. Combining tactical shooting and survival elements, players must defend humanity against alien forces, upgrade their arsenal, and coordinate with teammates for survival.</p>
-
-    <h2>Conclusion</h2>
-    <p>The gaming world in 2025 is brimming with innovation, creativity, and excitement. Whether you’re into strategy, adventure, racing, or competitive battles, these upcoming games promise hours of entertainment. Stay tuned, gear up, and get ready to level up your gaming experience!</p>
-
-        </section> -->
-
 
         <section>
             <h1>Top 5 Upcoming Games You Can't Miss in 2025</h1>
